tdf#130373 substitute color only works if left set to transparent.

regression from
	commit e27be9dfbcf8636a7440f828435b1860dfa38977
	Date:   Wed Jul 3 15:07:44 2019 +0200
    move some Bitmap replace logic inside vcl

Change-Id: I0d985314367e26134c940e54f485db373d4c3642