svx/source/dialog/_bmpmask.cxx
@@ -994,6 +994,10 @@ Graphic SvxBmpMask::Mask( const Graphic& rGraphic )
                         if ( aBitmapEx.GetSizePixel().Width() && aBitmapEx.GetSizePixel().Height() )
                         {
                             ImpMask( aBitmapEx );
+                            if ( aGraphic.IsTransparent() )
+                                aGraphic = Graphic( BitmapEx( aBitmapEx.GetBitmap(), aBitmapEx.GetMask() ) );
+                            else
+                                aGraphic = aBitmapEx;
                         }
                     }
                 }
